Se agrega forms.py

--- a/CaosNews/webcaosnews/templates/base.html
+++ b/CaosNews/webcaosnews/templates/base.html
@@ -60,6 +60,7 @@
               <li><a class="dropdown-item" href="{% url 'mun' %}">Mundo</a></li>
               <li><a class="dropdown-item" href="{% url 'dep' %}">Deportes</a></li>
               <li><a class="dropdown-item" href="{% url 'pol' %}">Política</a></li>
+              <li><a class="dropdown-item" href="{% url 'lUT' %}">Lo Último</a></li>
             </ul>
           </li>
         </ul>
