--- a/CaosNews/webcaosnews/templates/contacto.html
+++ b/CaosNews/webcaosnews/templates/contacto.html
@@ -1,10 +1,17 @@
-{% extends "base.html" %} {%load static %} {% block titulo %} Contacto - Caos
-News {% endblock titulo %} {%block css %}
+{% extends "base.html" %}
+{%load static %}
+{% block titulo %}
+Contacto - Caos News
+{% endblock titulo %}
+{%block css %}
 <link rel="stylesheet" href="{% static 'css/contacto.css' %}" />
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-{% endblock css%} {% block contenido %}
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+{% endblock css%}
+{% block contenido %}
 <!-- Formulario -->
+{% load crispy_forms_tags %}
 <div class="container">
     <div class="top border p-4">
         <h1 class="text-center">Contacta a Caos News</h1>
@@ -16,90 +23,55 @@ News {% endblock titulo %} {%block css %}
         <p class="text-muted">
             Completa el siguiente formulario con el tema de tu denuncia
         </p>
-        <form action="{% url 'cont' %}" name="formulario" id="formulario" method="post" enctype="multipart/form-data" class="row g-3 needs-validation" novalidate>
+        <form action="{% url 'cont' %}" name="formulario" id="formulario" method="post" enctype="multipart/form-data"
+            class="row g-3 needs-validation" novalidate>
             {% csrf_token %}
-            <div class="col-md-6">
-                <label for="txtFirstName" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="txtFirstName" name="txtFirstName" required />
-                <div class="invalid-feedback">Porfavor, ingrese un nombre válido.</div>
-            </div>
-            <div class="col-md-6">
-                <label for="txtLastName" class="form-label">Apellido</label>
-                <input type="text" class="form-control" id="txtLastName" name="txtLastName" required />
-                <div class="invalid-feedback">Porfavor, ingrese un apellido válido.</div>
-            </div>
-            <div class="col-md-8">
-                <label for="txtEmail" class="form-label">Email</label>
-                <input type="email" class="form-control" id="txtEmail" name="txtEmail" required />
-                <div class="invalid-feedback">Porfavor, ingrese un email válido.</div>
-            </div>
-            <div class="col-md-4">
-                <label for="txtPhone" class="form-label">Teléfono</label>
-                <input type="tel" class="form-control" id="txtPhone" pattern="[0-9]{9}" name="txtPhone" required placeholder="9 8145 4971" />
-                <div class="invalid-feedback">Porfavor, ingrese un teléfono válido.</div>
-            </div>
-            <div class="col-md-12">Inserta tu mensaje</label>
-                <textarea class="form-control" id="txtComments" name="txtComments" rows="3" required></textarea>
-                <div class="invalid-feedback">Porfavor, ingrese un mensaje.</div>
-            </div>
-            <div class="input-group">
-                <input type="file" class="form-control" id="txtFile" name="txtFile" accept="image/png, image/jpeg, image/jpg" />
-            </div>
-            <div class="col-md-12">
-                <button type="submit" id="submit" class="btn btn-primary">Enviar</button>
+            
+                <div class="col-md-6">
+                    {{ form.pnombre | as_crispy_field }}
+                </div>
+                <div class="col-md-6">
+                    {{ form.appaterno | as_crispy_field }}
+                </div>
+                <div class="col-md-8">
+                    {{ form.email | as_crispy_field }}
+                </div>
+                <div class="col-md-4">
+                    {{ form.telefono | as_crispy_field }}
+                </div>
+                <div class="col-md-12">
+                    {{ form.mensaje | as_crispy_field }}
+                </div>
+                <div class="input-form">
+                    {{ form.archivo | as_crispy_field }}
+                </div>
+                <div class="col-md-12">
+                <button type="submit" id="submit" class="btn btn-danger">Enviar</button>
             </div>
         </form>
     </div>
 </div>
 
+{% if messages %}
+{% for m in messages %}
 <script>
-    //Validación del formulario
-    // Example starter JavaScript for disabling form submissions if there are invalid fields
-    (() => {
-        'use strict'
-
-        // Fetch all the forms we want to apply custom Bootstrap validation styles to
-        const forms = document.querySelectorAll('.needs-validation')
-
-        // Loop over them and prevent submission
-        Array.from(forms).forEach(form => {
-            form.addEventListener('submit', event => {
-                if (!form.checkValidity()) {
-                    event.preventDefault()
-                    event.stopPropagation()
-                }
-                form.classList.add('was-validated')
-                if (form.checkValidity()) {
-                    event.preventDefault()
-                    event.stopPropagation()
-                    //alert("Formulario enviado")
-                    $.ajax({
-                        type: "POST",
-                        url: "{% url 'cont' %}",
-                        enctype:"multipart/form-data",
-                        data: $("#formulario").serialize(),success: function (data) {
-                            Swal.fire({
-                                title: '¡Enviado!',
-                                text: 'Tu mensaje fue enviado. Te contactaremos a la brevedad',
-                                icon: 'success',
-                                confirmButtonText: 'OK'
-                            }).then(function () {
-                                form.classList.add('was-validated')
-                                location.reload(true);
-                                console.log('was validated ok')
-                            })},
-                        error: function (data) {
-                            Swal.fire({
-                                title: '¡Error!',
-                                text: 'Ha ocurrido un error.',
-                                icon: 'error',
-                                confirmButtonText: 'OK'
-                            })
-                        }
-                    })
-                }
-            }, false)
+    Swal.fire({
+            title: '¡Enviado!',
+            text: "{{m}}",
+            icon: 'success',
+            confirmButtonColor: '#3085d6',
+            confirmButtonText: 'Entendido'
         })
-    })()
 </script>
+{% endfor %}
+{% endif %}
 {% endblock contenido %}
+{% block script_final %}
+<!-- Optional Javascript -->
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+{% endblock script_final %}
