--- a/CaosNews/webcaosnews/templates/escribir.html
+++ b/CaosNews/webcaosnews/templates/escribir.html
@@ -15,19 +15,6 @@ Formulario de Publicación de Noticias - Caos News
 <!-- Tiny MC -->
 <script src="https://cdn.tiny.cloud/1/8l8m0j6ztkpaf38bwic7ipvi8ioyez7mb801f53jk8ik7ygw/tinymce/6/tinymce.min.js"
     referrerpolicy="origin"></script>
-<script>
-    function agregarNoticia(id) {
-        Swal.fire({
-            title: '¿Está seguro de continuar?',
-            text: "Luego de enviar el artículo, no podrá editarlo.",
-            icon: 'warning',
-            showCancelButton: true,
-            confirmButtonColor: '#3085d6',
-            cancelButtonColor: '#d33',
-            confirmButtonText: 'Estoy seguro'
-        })
-    }
-</script>
 {% endblock script %}
 
 
@@ -79,17 +66,11 @@ Formulario de Publicación de Noticias - Caos News
 {% for m in messages %}
 <script>
     Swal.fire({
-            title: '¿Está seguro de continuar?',
-            text: "Luego de enviar el artículo, no podrá editarlo.",
-            icon: 'warning',
-            showCancelButton: true,
+            title: '¡Bien hecho!',
+            text: "{{m}}",
+            icon: 'success',
             confirmButtonColor: '#3085d6',
-            cancelButtonColor: '#d33',
-            confirmButtonText: 'Estoy seguro'
-        }).then(function(result){
-            if(result.isConfirmed){
-                window.location.href = "{% url 'escr' %}";
-            }
+            confirmButtonText: 'Entendido'
         })
 </script>
 {% endfor %}
@@ -98,9 +79,6 @@ Formulario de Publicación de Noticias - Caos News
 
 {% block script_final %}
 <!-- Optional Javascript -->
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
