--- a/CaosNews/webcaosnews/templates/base.html
+++ b/CaosNews/webcaosnews/templates/base.html
@@ -35,7 +35,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-danger sticky-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="{% url 'indx' %}">
         <h1 class="icon-codiepie"></h1>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
