--- a/CaosNews/webcaosnews/templates/index.html
+++ b/CaosNews/webcaosnews/templates/index.html
@@ -4,6 +4,9 @@
 Caos News
 {% endblock titulo%}
 {% block css %}
+<link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/owl.theme.default.css' %}">
+<script src="{% static 'js/jquery.min.js' %}"></script>
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
 {% endblock css %}
 {% block contenido %}
@@ -22,27 +25,21 @@ Caos News
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <a href="{% url 'mun' %}"><img src="{% static 'img/putin.jpg' %}" class="d-block w-100" alt="..."></a>
-            <div class="carousel-caption d-none d-md-block">
-              <h5 class="text-danger fs-4 fw-bold shadow-lg p-3 mb-5 bg-body rounded">¿Quiénes son y por qué sancionaron
-                a las hijas de Vladimir Putin?</h5>
-            </div>
-          </div>
-          <div class="carousel-item">
             <img src="{% static 'img/accidente.jpg' %}" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5 class="text-danger fs-4 fw-bold shadow-lg p-3 mb-5 bg-body rounded">Joven hallado muerto en Coronel:
                 Esto es lo que se sabe del caso y las pistas que permitieron encontrar su cuerpo</h5>
             </div>
           </div>
+          {% for reg in noticias %}
           <div class="carousel-item">
-            <img src="{% static 'img/caso.jpg' %}" class="d-block w-100" alt="...">
+            <img src="{{reg.portada.url}}" class="d-block w-100" alt="{{reg.titulo}}">
             <div class="carousel-caption d-none d-md-block">
-              <h5 class="text-danger fs-4 fw-bold shadow-lg p-3 mb-5 bg-body rounded">Second slide label</h5>
+              <h5 class="text-danger fs-4 fw-bold shadow-lg p-3 mb-5 bg-body rounded">{{reg.titulo}}</h5>
             </div>
           </div>
-
         </div>
+        {% endfor %}
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
           data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -57,60 +54,64 @@ Caos News
     </div>
   </div>
 </div>
-<div class="container border border-top-0 py-3" id="contenido">
-  <div class="row justify-content-center">
+<!-- Fin Carrusel -->
+<div class="container border border-top-0 py-3">
+  <div class="row justify-content-center" id="gael">
     <div class="col-sm-6 col-md-6 col-lg-4">
       <div class="btn btn-danger" id="DolarO"></div>
+    </div>
+    <div class="col-sm-6 col-md-6 col-lg-4">
+      <div class="btn btn-danger" id="UTF"></div>
     </div>
   </div>
 </div>
 <!-- Cards -->
 <div class="container border border-top-0" id="contenido">
-  <h2 class="h2 text-uppercase text-decoration-underline text-center p-3">Nacional</h2>
-  <div class="row justify-content-center"
-    style="padding-top: 20px; padding-bottom: 50px; margin-left: 50px; margin-right: 50px;">
-  {% for reg in noticias %}
-  <div class="col-12 col-sm-6 col-lg-3">
-    <div class="card h-100 border-0" style="width: 15rem;">
-      <img src="{{reg.portada.url}}" class="card-img-top" alt="..." style="height: 150px;">
+  <!-- Artículos -->
+  <div class="card-header h2 text-uppercase text-decoration-underline text-center p-3">Nacional</div>
+  <div class="owl-carousel owl-theme">
+    {% for reg in noticiasN %}
+    <div class="item" style="text-decoration: none !important;">
+      <div class="card h-100 border-0">
+        <img src="{{reg.portada.url}}" alt="" class="card-img-top">
+      </div>
       <div class="card-body">
-        <h5 class="card-title" style="font-size:15px;">{{ reg.titulo }}<span class="badge bg-primary ms-2">Tendencia</span></h5>
-        <a href="{% url 'nac' %}" class="btn btn-danger">Ver más</a>
+        <a href="{% url 'nac' %}">
+          <h5 class="card-title fs-6 text fw-normal text-center text-dark">{{reg.titulo}}</h5>
+        </a>
       </div>
     </div>
+    {% endfor %}
   </div>
-  {% endfor %}
-  
-
-</div>
-
-<!-- Card Horizontal -->
-<h2 class="h2 text-uppercase text-decoration-underline text-center p-3">Deportes</h2>
-<div class="row justify-content-center"
-  style="padding-top: 20px; padding-bottom: 50px; margin-left: 5%; margin-right: 5%;">
-  <div class="card border-0 rounded-0" style="max-width: 100%;">
-    <div class="row g-0">
-      <div class="col-sm-5">
-        <img src="{% static 'img/deportes.jpg' %}" class="img-fluid rounded-0" alt="...">
-      </div>
-      <div class="col-sm-7">
-        <div class="card-body">
-          <h5 class="card-title">Una apática Universidad Católica cayó en San Carlos ante Deportes La Serena</h5>
-          <p class="card-text"><small class="text-muted">Por John Doe</small></p>
-          <p class="card-text text-justify">Universidad Católica cerró una semana para el olvido este sábado al
-            caer en condición de local por 0-2 ante Deportes La Serena, en partido jugado en San Carlos de
-            Apoquindo y correspondiente a la novena fecha del Campeonato Nacional 2022.</p>
-          <a href="{% url 'dep' %}" class="btn btn-primary stretched-link">Ver más</a>
+  <!-- Card Horizontal -->
+  <h2 class="h2 text-uppercase text-decoration-underline text-center p-3">Deportes</h2>
+  <div class="row justify-content-center"
+    style="padding-top: 20px; padding-bottom: 50px; margin-left: 5%; margin-right: 5%;">
+    <div class="card border-0 rounded-0" style="max-width: 100%;">
+      <div class="row g-0">
+        <div class="col-sm-5">
+          <img src="{{notDeporte.portada.url}}" class="img-fluid rounded-0" alt="...">
+        </div>
+        <div class="col-sm-7" id="hCard">
+          <div class="card-body">
+            <h5 class="card-title">{{notDeporte.titulo}}</h5>
+            <p class="card-text"><small class="text-muted">Por {{notDeporte.autor}}</small></p>
+            <p class="card-text text-justify text-dark" >{{notDeporte.contenido |truncatechars:350 | safe|escape}}</p>
+            <a href="{% url 'dep' %}" class="btn btn-primary stretched-link">Ver más</a>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-</div>
-
+<script>
+  const card = document.getElementById('hCard');
+  card.innerHTML = card.innerHTML.replace(/\<strong>/g, '').replace(/\<\/strong>/g, '').replace(/\<h2>/g, '').replace(/\<\/h2>/g, '');
+  
+</script>
 {% endblock contenido %}
 {% block script_final %}
-<script>
+<!-- <script>
   fetch('https://mindicador.cl/api').then(function (response) {
     return response.json();
   }).then(function (dailyIndicators) {
@@ -118,8 +119,33 @@ Caos News
   }).catch(function (error) {
     console.log('Requestfailed', error);
   });
-
+</script> -->
+<script>
+  $(document).ready(function () {
+    $(".owl-carousel").owlCarousel({
+      merge: true,
+      loop: true,
+      margin: 10,
+      nav: false,
+      center: true,
+      autoplay: true,
+      autoplayTimeout: 1000,
+      autoplayHoverPause: true,
+      stagePadding: 50,
+      responsive: {
+        0: {
+          items: 2
+        },
+        600: {
+          items: 3
+        },
+        1000: {
+          items: 5
+        }
+      }
+    });
+  });
 </script>
-
-<script src="{% static 'js/script.js' %}"></script>
+<script src="{% static 'js/owl.carousel.min.js' %}"></script>
+<script src="{% static 'js/index.js' %}"></script>
 {% endblock script_final %}
