--- a/CaosNews/webcaosnews/templates/panel/basePanel.html
+++ b/CaosNews/webcaosnews/templates/panel/basePanel.html
@@ -8,8 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block titulo %} {% endblock titulo %}</title>
     {% block css %}
-
     {% endblock css %}
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" id="theme-styles">
     <link rel="stylesheet" href="{% static 'css/panel.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -37,12 +38,16 @@
         <!-- Sidebar -->
         <div id="sidebar-container" class="bg-danger">
             <div class="logo">
-                <h1 class="icon-codiepie text-light fw-bold fs-2">CAOS NEWS</h1>
+                <a href="{% url 'panel' %}">
+                    <h1 class="icon-codiepie text-light fw-bold fs-2">CAOS NEWS</h1>
+                </a>
             </div>
             <div class="menu">
                 <a href="#" class="d-block p-3 text-light"><i class="fa-solid fa-user me-2 lead"></i>Perfil</a>
-                <a href="#" class="d-block p-3 text-light"><i
+                <a href="{% url 'escr' %}" class="d-block p-3 text-light"><i
                         class="fa-solid fa-pen-to-square me-2 lead"></i>Escribir</a>
+                <a href="{% url 'list' %}" class="d-block p-3 text-light"><i
+                        class="fa-solid fa-list-ul me-2 lead"></i>Tus Noticias</a>
                 <a href="#" class="d-block p-3 text-light"><i
                         class="fa-solid fa-chart-simple me-2 lead"></i>Estadísticas</a>
                 <a href="#" class="d-block p-3 text-light"><i
@@ -70,8 +75,8 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
-                                    <img src="../static/img/putin.jpg" alt="Imagen de perfil"
-                                        class="img-fluid rounded-circle avatar me-2">
+                                    {% comment %} <img src="{{user.image}}" alt="Imagen de perfil"
+                                        class="img-fluid rounded-circle avatar me-2"> {% endcomment %}
                                     {{user.first_name}} {{user.last_name}}
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -79,7 +84,7 @@
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'cerrar' %}">Cerrar sesión</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -88,61 +93,41 @@
             </nav>
             <!-- Navbar -->
             <!-- Contenido -->
+            {% for m in messages %}
+            {% if m.extra_tags == 'fallo' %}
+            <script>
+                Swal.fire({
+                    title: '¡Error!',
+                    text: '{{ m.message }}',
+                    icon: 'error',
+                    confirmButtonText: 'Ok'
+                })
+            </script>
+            {% else %}
+            <script>
+                Swal.fire({
+                    title: '¡Bien hecho!',
+                    text: "{{m}}",
+                    icon: 'success',
+                    confirmButtonColor: '#3085d6',
+                    confirmButtonText: 'Entendido'
+                })
+            </script>
+            {% endif %}
+            {% endfor%}
             {% block contenido %}
-  
+
             {% endblock contenido %}
             <!-- Contenido-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"
-        integrity="sha256-cHVO4dqZfamRhWD7s4iXyaXWVK10odD+qp4xidFzqTI=" crossorigin="anonymous"></script>
-    <script>
-        const labels = [
-            'Enero',
-            'Febrero',
-            'Marzo',
-            'Abril',
-            'Mayo',
-            'Junio',
-        ];
-
-        const data = {
-            labels: labels,
-            datasets: [{
-                label: 'Visitas',
-                backgroundColor: [
-                    '#DC3545',
-                    '#DC3545',
-                    '#DC3545',
-                    '#DC3545',
-                    '#EA868F',
-                    '#DC3545',
-                ],
-                borderColor: 'rgb(255, 99, 132)',
-                data: [50, 100, 105, 125, 107, 180, 200],
-            }]
-        };
-
-        const config = {
-            type: 'bar',
-            data: data,
-            options: {
-                font: {
-                    family: "Fira Sans",
-                },
-            }
-        };
-    </script>
-    <script>
-        const myChart = new Chart(
-            document.getElementById('myChart'),
-            config
-        );
-    </script>
-    {% block script_final %}
-    <script src="{% static 'js/script.js' %}"></script>
-    {% endblock script_final %}
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+                crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"
+                integrity="sha256-cHVO4dqZfamRhWD7s4iXyaXWVK10odD+qp4xidFzqTI=" crossorigin="anonymous"></script>
+           
+            {% block script_final %}
+            <script src="{% static 'js/script.js' %}"></script>
+            {% endblock script_final %}
 </body>
 
 </html>
