--- a/CaosNews/webcaosnews/templates/panel/modificarNoticia.html
+++ b/CaosNews/webcaosnews/templates/panel/modificarNoticia.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
 {% block titulo %}
-Formulario de Publicación de Noticias - Caos News
+Formulario de Modificación de Noticias - Caos News
 {% endblock titulo %}
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/escribir.css' %}">
-<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="{% static 'js/jquery.validate.min.js' %}"></script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -23,7 +22,7 @@ Formulario de Publicación de Noticias - Caos News
 <!-- Contenido -->
 <div class="container border border-bottom-0">
     <div class="top p-4">
-        <h1 class="text-center titulo-web shadow">Escritura de Artículo</h1>
+        <h1 class="text-center titulo-web shadow">Modificación de Artículo</h1>
     </div>
     <form action="" name="formulario" id="formulario" method="post" enctype="multipart/form-data"
         class="needs-validation" novalidate>
@@ -55,35 +54,13 @@ Formulario de Publicación de Noticias - Caos News
         </div>
         <div class="row justify-content-end">
             <div class="col-sm-6 col-md-5 col-lg-1 pb-3">
-                <button  id="submit" class="btn btn-danger">Subir</button>
+                <button  id="submit" class="btn btn-danger">Modificar</button>
             </div>
         </div>
     </form>
 
 </div>
 
-{% for m in messages %}
-    {% if m.extra_tags == 'fallo' %}
-        <script>
-            Swal.fire({
-                title: '¡Error!',
-                text: '{{ m.message }}',
-                icon: 'error',
-                confirmButtonText: 'Ok'
-            })
-        </script>
-     {% else %}
-     <script>
-        Swal.fire({
-                title: '¡Bien hecho!',
-                text: "{{m}}",
-                icon: 'success',
-                confirmButtonColor: '#3085d6',
-                confirmButtonText: 'Entendido'
-            })
-    </script>
-    {% endif %}
-{% endfor%}
 
 {% endblock contenido %}
 
