--- a/CaosNews/webcaosnews/templates/panel/panel.html
+++ b/CaosNews/webcaosnews/templates/panel/panel.html
@@ -55,7 +55,7 @@ Panel Administrativo - Caos News
                         </div>
                         <div class="col-lg-3 col-md-6 d-flex my-3">
                             <div class="mx-auto">
-                                <h6 class="text-muted">Artículos Destacdos</h6>
+                                <h6 class="text-muted">Artículos Destacados</h6>
                                 <h3 class="fw-bold">458</h3>
                                 <h6 class="text-success fw-light"><i
                                         class="fa-solid fa-circle-chevron-up fa-sm me-2"></i>10%</h6>
