--- a/CaosNews/webcaosnews/templates/registration/login.html
+++ b/CaosNews/webcaosnews/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "../base.html" %}
 {% load socialaccount %}
 {% providers_media_js %}
 {%load static %}
@@ -8,11 +8,14 @@ Iniciar Sesión - Caos News
 {%block css %}
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 {% endblock css%}
 {% block contenido %}
+{% load crispy_forms_tags %}
 <!-- Formulario -->
 <div class="container-fluid ps-md-0">
-    <form action="{% url 'log' %}" method="POST" class="needs-validation" novalidate>
+    <form action="" method="POST" class="needs-validation" novalidate>
         {% csrf_token %}
         <div class="row g-0">
             <div class="d-none d-md-flex col-md-4 col-lg-6 bg-image"></div>
@@ -22,26 +25,7 @@ Iniciar Sesión - Caos News
                         <div class="row">
                             <div class="col-md-9 col-lg-8 mx-auto">
                                 <h3 class="login-heading mb-4">¡Bienvenido de vuelta!</h3>
-                                <!-- Sign In-->
-                                <div class="form-floating mb-3">
-                                    <input type="text" class="form-control" id="txtEmail" name="txtEmail"
-                                        placeholder="name@caosnews.cl" required>
-                                    <label for="txtEmail">Email o Nombre de Usuario</label>
-                                    <div class="valid-feedback">
-                                        ¡Así se hace!
-                                    </div>
-                                    <div class="invalid-feedback">
-                                        Por favor, ingrese un email o usuario valido.
-                                    </div>
-                                </div>
-                                <div class="form-floating mb-3">
-                                    <input type="password" class="form-control" id="txtPassword" name="txtPassword"
-                                        placeholder="Password" required>
-                                    <label for="txtPassword">Contraseña</label>
-                                    <div class="invalid-feedback">
-                                        Contraseña incorrecta.
-                                    </div>
-                                </div>
+                                {{ form | crispy}}
 
                                 <div class="form-check mb-3">
                                     <input class="form-check-input was-validated" type="checkbox" value=""
@@ -59,16 +43,6 @@ Iniciar Sesión - Caos News
                                                 href="{% provider_login_url 'google' method = 'oauth2' %}" style="color: white;"
                                                 >Entrar Con Google</a>
                                         </button>
-                                    <div class="container my-3">
-                                        {% if messages %}
-                                        {% for message in messages %}
-                                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                                            <strong>{{message}}</strong>
-                                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                                          </div>
-                                          {% endfor %}
-                                        {% endif %}
-                                </div>
                             </div>
                             <div class="d-grid">
                                 <div class="text-center">
