--- a/CaosNews/webcaosnews/templates/base.html
+++ b/CaosNews/webcaosnews/templates/base.html
@@ -88,7 +88,7 @@
           </div>
           {% else %}
           <li class="nav-item">
-            <a class="nav-link" id="iniciarSesion" href="{% url 'log' %}"><i class="icon-user"></i> Iniciar Sesión</a>
+            <a class="nav-link" id="iniciarSesion" href="{% url 'login' %}"><i class="icon-user"></i> Iniciar Sesión</a>
           </li>
           {% endif %}
           <form class="d-flex ">
